--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .btn {
-    @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider
+    @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider active:scale-95
 }
 
 .input-box {
@@ -45,24 +45,49 @@
     background-position: center;
 }
 
+
+.body-functionality {
+    @apply relative overflow-hidden;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
+}
+
+.body-functionality::before {
+    content: '';
+    @apply absolute inset-0;
+    background: 
+        linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)),
+        url('/pictures/A_realistic_rainforest_scene_with_a_dark\,_shadowy_.jpeg') no-repeat center center;
+    background-size: cover;
+    filter: blur(8px);
+    z-index: -1;
+}
+
+
+
 .stats{
-    @apply flex items-center bg-white shadow-lg rounded-full py-3 px-6 justify-between w-full max-w-md
+    @apply flex items-center backdrop-blur-2xl bg-gray-300/60 shadow-lg rounded-full py-3 px-6 justify-between w-full max-w-md
 }
 
 .refresh {
     @apply  bg-gradient-to-r from-green-500 to-green-700 flex justify-center items-center mt-8 shadow-xl hover:scale-105 transform transition-all duration-300 hover:shadow-2xl
 }
 
-.footer-btn {
+/* .footer-btn {
     @apply  bg-gradient-to-r from-green-500 to-green-700 flex justify-center items-center mt-8 shadow-xl hover:scale-105 transform transition-all duration-300 hover:shadow-2xl
-}
+} */
 
 .bar {
     @apply w-1/2 h-2 rounded-full mx-4 bg-gradient-to-r flex items-center space-x-4 max-w-lg
 }
+.temperature-backdrop {
+    @apply w-1/2 h-2 rounded-full mx-4 bg-slate-500 flex items-center space-x-4 max-w-lg
+}
 
 .today-text{
-    @apply w-24 text-gray-800
+    @apply w-24 text-gray-900
 }
 
 .hidden-element {
@@ -85,5 +110,41 @@
 }
 
 .footer-btn {
-    @apply  bg-gradient-to-r from-green-100 to-green-200 flex justify-center items-center mt-8 shadow-xl hover:scale-105 transform transition-all duration-300 hover:shadow-2xl
+    @apply  bg-gradient-to-r from-green-100 to-green-200 flex justify-center items-center mt-8 shadow-xl hover:scale-105 transform transition-all duration-300 hover:shadow-2xl active:scale-95
+}
+
+.value-dot {
+    @apply absolute top-1/2 transform -translate-y-1/2 left-1/2 h-2 w-2 rounded-full bg-white border border-gray-500/40
+}
+
+.navigation {
+    @apply fixed top-0 left-0 w-auto h-screen flex flex-col bg-customGray-600 text-white rounded-r-3xl shadow-2xl
+}
+
+.sidebar-icon {
+    @apply relative flex items-center justify-center h-12 w-12 mt-2 mb-2 mx-auto text-white
+}
+
+.card-icon {
+    @apply flex items-center justify-center  ml-4 mr-4 mx-auto p-3 bg-customGray-600 hover:bg-customGray-600 hover:rounded-3xl hover:shadow-2xl hover:scale-105 transform transition-all duration-300 cursor-pointer active:scale-95
+ }
+
+/* .card-empty {
+    @apply flex items-center justify-center  ml-4 mr-4 mx-auto p-3 
+} */
+
+.card-functionality {
+    @apply backdrop-blur-2xl bg-gray-300/60 p-10 rounded-3xl shadow-2xl items-center space-y-4 w-full h-full hover:border
+}
+
+.form-field {
+    @apply flex items-center backdrop-blur-2xl bg-gray-300/60 shadow-xl hover:shadow-2xl  rounded-full py-3 px-6 w-full max-w-md hover:scale-105 transform transition-all duration-300
+}
+
+.form-btn {
+    @apply  w-full max-w-md py-2 px-6 rounded-full bg-gradient-to-r from-green-100 to-green-200 flex justify-center items-center  hover:scale-105 transform transition-all duration-300 shadow-2xl active:scale-95 hover:shadow-green-800
+}
+
+.shift-right {
+    @apply -mr-6 rounded-full transition-all duration-300; /* Smooth transition */
 }
